[project]
name = "plant-disease-detector"
version = "0.1.0"
description = "CNN-based plant disease classification"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "scikit-learn>=1.3",
    "opencv-python>=4.8",
    "tqdm>=4.66",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = [
    "jupyter",
    "ipykernel",
]